Add format to request
